# mlops-cloud-backend

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.base  Dockerfile.cm  Dockerfile.cv  Dockerfile.gpu  Dockerfile.hm  Dockerfile.mlx  Dockerfile.sm  Dockerfile.tm  README.md  build.sh  cleaner_manager.py  hardware_metrics_manager.py  ml_inference_manager.py  pyproject.toml  run_mlx_tests.sh  system_manager.py  terminal_manager.py  terminal_ws_protocol.md  test.py  video_manager.py
.github/workflows/: docker-build-containers.yaml
backend_module/: command_executer.py  config.py  database.py  encoder.py  gpu_check.py  object_storage.py  progress_tracker.py  uuid_tools.py
docker/: Dockerfile.cv  Dockerfile.mlx
ml_module/: cli_export_trt.py  cli_infer_rtdetr.py  cli_infer_samrai.py  cli_run_group.py  cli_train_rtdetr.py  model_samurai_ulr.py  postprocess.py  registry.py  rtdetr_trainer.py  uploader.py
query/: annotation_query.py  cleaner_query.py  encode_job_query.py  encoded_segment_query.py  file_query.py  hls_job_query.py  hls_playlist_query.py  hls_segment_query.py  inference_job_progress_query.py  inference_result_query.py  merge_group_query.py  ml_inference_job_query.py  utils.py
tests/: conftest.py  test_encoder.py
